Use a less goofy example string
In particular, use a string that is not subject to change!
Hat tip Thomas Colthurst. Closes #363.

Also fix a|b formatting and note that the inline/overflow boundary
is >= 15 rather than > 15.

--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -1645,9 +1645,9 @@ For string values, such as found in the ID, REF, ALT, INFO, and FORMAT fields, s
 The array isn't terminated by a null byte.
 The length of the string is given by the length of the type descriptor.
 
-Suppose you want to encode the string ACAC.
-First, we need the type descriptor byte, which is the string type 0x07 or'd with inline size (4) yielding the type byte of 0x40 | 0x07 = 0x47.
-Immediately following the type byte is the four byte ASCII encoding of ``ACAC'' 0x41 0x43 0x41 0x43.
+Suppose you want to encode the string ``{\tt ACAC}''.
+First, we need the type descriptor byte, which is the string type 0x07 or'd with inline size (4) yielding the type byte of 0x40 $|$ 0x07 = 0x47.
+Immediately following the type byte is the four byte ASCII encoding of ``{\tt ACAC}'': 0x41 0x43 0x41 0x43.
 So the final encoding is:
 
 \vspace{0.1cm}
@@ -1656,18 +1656,18 @@ So the final encoding is:
 \end{tabular}
 \vspace{0.3cm}
 
-Suppose you want to encode the string MarkDePristoWorksAtTheBroad, a string of size 27.
+Suppose you want to encode the string ``{\tt VariantCallFormatSampleText}'', a string of size 27.
 First, we need the type descriptor byte, which is the string type 0x07.
-Because the size exceeds the inline size ($27 > 15$) we set the size to overflow, yielding the type byte of 0xF0 | 0x07 = 0xF7.
+Because the size exceeds the inline size limit ($27 \geq 15$) we set the size to overflow, yielding the type byte of 0xF0 $|$ 0x07 = 0xF7.
 Immediately following the type byte is the typed size of 27, which we encode by the atomic INT8 value: 0x11 followed by the actual size 0x1B.
-Finally comes the actual bytes of the string: 0x4D 0x61 0x72 0x6B 0x44 0x65 0x50 0x72 0x69 0x73 0x74 0x6F 0x57 0x6F 0x72 0x6B 0x73 0x41 0x74 0x54 0x68 0x65 0x42 0x72 0x6F 0x61 0x64.
+Finally comes the actual bytes of the string: 0x56 0x61 0x72 0x69 0x61 0x6E 0x74 0x43 0x61 0x6C 0x6C 0x46 0x6F 0x72 0x6D 0x61 0x74 0x53 0x61 0x6D 0x70 0x6C 0x65 0x54 0x65 0x78 0x74.
 So the final encoding is:
 
 \vspace{0.3cm}
 \begin{tabular}{ | p{9cm} | p{6cm} | } \hline
 0xF7 & string with overflow size \\ \hline
 0x11 0x1B & overflow size encoded as INT8 with value 27 \\ \hline
-0x4D 0x61 0x72 0x6B 0x44 0x65 0x50 0x72 0x69 0x73 0x74 0x6F 0x57 0x6F 0x72 0x6B 0x73 0x41 0x74 0x54 0x68 0x65 0x42 0x72 0x6F 0x61 0x64 & message in ASCII \\ \hline
+0x56 0x61 0x72 0x69 0x61 0x6E 0x74 0x43 0x61 0x6C 0x6C 0x46 0x6F 0x72 0x6D 0x61 0x74 0x53 0x61 0x6D 0x70 0x6C 0x65 0x54 0x65 0x78 0x74 & message in ASCII \\ \hline
 \end{tabular}
 \vspace{0.3cm}
 
