Fix \item typo [trivial]

--- a/CRAMv3.tex
+++ b/CRAMv3.tex
@@ -683,9 +683,9 @@ QS & encoding\texttt{<}byte\texttt{>} & quality scores & quality scores\tabularn
 \end{tabular}
 
 \begin{tablenotes}
-\item{a} Note RN this is decoded after MF if the record is detached from the mate and we are attempting to auto-generate read names.
-\item{b} The count is reset for each slice so NF can only refer to a record later within this slice.
-\item{c} TL is followed by decoding the tag values themselves, in order of appearance in the tag dictionary.
+\item[a] Note RN this is decoded after MF if the record is detached from the mate and we are attempting to auto-generate read names.
+\item[b] The count is reset for each slice so NF can only refer to a record later within this slice.
+\item[c] TL is followed by decoding the tag values themselves, in order of appearance in the tag dictionary.
 \end{tablenotes}
 \end{threeparttable}
 
